--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,22 @@ body {
     float: left;
 }
 
-/* debug */
-.container.debug{
+.img-pag{
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
+/***** * debug * *****/
+
+/* .container.debug{
     height: 600px;
     background-color: lightcoral;
-}
+} */
 
 .debug .box{
     height: 600px;
     background-color: lightseagreen;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-right: 10px;
     margin-bottom: 10px;
 }
