--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,20 @@ body {
     height: 600px;
     object-fit: cover;
 }
+
+.img-hover{
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+    display: none;
+}
+
+.box:hover .img-pag{
+    display: none;
+}
+.box:hover .img-hover{
+    display: inline-block;
+}
 /***** * debug * *****/
 
 /* .container.debug{
